language/move-lang/tests/move_check/liveness/dead_refs_simple_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:4:21 ───
   │
 5 │         _ = x;
   │             ^ Invalid copy of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

   ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:4:21 ───
   │
 6 │         _ = move x;
   │             ^^^^^^ Invalid move of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:12:21 ───
    │
 13 │         _ = x;
    │             ^ Invalid copy of local 'x'
    ·
 12 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_simple_invalid.move:12:21 ───
    │
 14 │         _ = move x;
    │             ^^^^^^ Invalid move of local 'x'
    ·
 12 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

